  (#3142456 Matthieu Casanova)

- The Java based installer now correctly handles GNU style long filenames in
  the installer package and thus does not corrupt the JavaDoc files anymore
  (#2327520 Björn "Vampire" Kautler)

- Several message boxes were not being created on the EDT which would result in
  tiny, non-resizable message boxes. (#3441535 Dale Anson)

}}}
{{{ API Changes

- If electric key hit causes indentation, it is available as a separate
  undoable event. So it's possible to revert the reindentation and not to
  revert the character typed. (Jarek Czekalski)

- New VFS capability: NON_AWT_SESSION_CAP and a helper method
  VFS.createVFSSessionSafe that frees the caller from entering the EDT
  thread in most cases. All built-in filesystems have this capability set.
  (Jarek Czekalski)

- The status bar widget service is now
  org.gjt.sp.jedit.gui.statusbar.StatusWidgetFactory instead of
  org.gjt.sp.jedit.gui.statusbar.StatusWidget (only the name in service.xml)
  is modified, because the service class is a StatusWidgetFactory and not a
  StatusWidget (#3521413 Matthieu Casanova)

- New public constructor for org.gjt.sp.jedit.gui.ErrorListDialog
  allowing for specifying custom urgency (priority). (Jarek Czekalski)

- TextArea.isCaretVisible became public (patch #3518424 Makarius)

- Fixed jedit exit procedure. Now all views are closed. Earlier only
  the current view was properly closed. This may be important for plugins
  that were workarounding the issue, as now they will get more
  ViewUpdate.CLOSED messages. (Jarek Czekalski)

- The JEditEmbeddedTextArea and StandaloneTextArea do not create an empty
  popup menu anymore.
  To add a context menu in your JEditEmbeddedTextArea, please override
  createPopupMenu(MouseEvent evt) as before, but also call
  setRightClickPopupEnabled(true) in your constructor (Matthieu Casanova)

- New jEdit.getCurrentLanguage() method that returns the language used  by jEdit
  (Matthieu Casanova)
